Delete Wifi Credentials Button Fix

--- a/website.html
+++ b/website.html
@@ -33,9 +33,12 @@ R"rawliteral(
     <form action="/set_api">
         <input type="text" id="name" name="api_key">
         <input type="submit" value="Submit">
-    </form><br>
+    </form>
+    <br>
 
-    <p><a href="/WifiReset"><button class="button">Delete Wifi Credentials</button></a></p>
+    <form action="/WifiReset">
+        <button class="button">Delete Wifi Credentials</button>
+    </form>
 </body>
 
 </html>
