--- a/website.html
+++ b/website.html
@@ -25,6 +25,13 @@ R"rawliteral(
             cursor: pointer;
         }
     </style>
+    <script>
+        function submitMessage() {
+            alert("Saved value to file system.");
+            setTimeout(function () { document.location.reload(false); }, 500);
+        }
+    </script>
+
 </head>
 
 <body>
@@ -32,7 +39,7 @@ R"rawliteral(
     <label for="name">Facebok API Token:</label>
     <form action="/set_api">
         <input type="text" id="name" name="api_key">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" onclick="submitMessage()">
     </form>
     <br>
 
