Bug Fix + FS Read&Write

--- a/website.html
+++ b/website.html
@@ -46,6 +46,12 @@ R"rawliteral(
     <form action="/WifiReset">
         <button class="button">Delete Wifi Credentials</button>
     </form>
+
+    <br>
+
+    <form action="/WifiReset">
+        <button class="button">Get Follower Count</button>
+    </form>
 </body>
 
 </html>
